--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
@@ -19,21 +19,21 @@
             <a href="#il-faut-aller-ici-commerces">
               <div class="onglet">
                 <p class="nom-onglet">
-                  Mes Commerces
+                  <a routerLink="/merchant/commerces">Mes Commerces</a>
                 </p>
               </div>
             </a>
             <a href="#il-faut-aller-ici-commandes">
               <div class="onglet2">
                 <p class="nom-onglet">
-                  Commandes en Cours
+                  <a routerLink="/merchant/commands">Commandes en Cours</a>
                 </p>
               </div>
             </a>
             <a href="#il-faut-aller-ici-produits">
               <div class="onglet3">
                 <p class="nom-commandes">
-                  Mes Produits
+                  <a routerLink="/merchant/productTemplates">Mes Produits</a>
                 </p>
               </div>
             </a>
