essaye de regeler une partie des schedulerweek . pour l'instant on a l'affichage dans la liste des commerces.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -24,8 +24,9 @@
       </div>
 
       <div class="bloc-information-horaire col-12">
-        <!-- <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+        <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
 
+        <!-- Todo a virer
          <ul>
            <li class="detail-ouverture">Horaires d'ouverture :</li>
            <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
