Modifications des pages commerce-view, add-product-template et commerce-merchant-view.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.scss
@@ -4,41 +4,108 @@
 
 /* SECTION -> Bloc Détails Commerce */
 
+a {
+  color: var(--couleurVerte);
+}
+
+body {
+  width: 100%;
+  background-color: rgba(161,161,161,1);
+  background: -moz-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(161,161,161,1)), color-stop(5%, rgba(161,161,161,1)), color-stop(94%, rgba(102,102,102,1)), color-stop(100%, rgba(102,102,102,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: linear-gradient(135deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', endColorstr='#666666', GradientType=1 );
+  padding-bottom: 40px;
+}
+
+
+.titre-produit{
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.4em;
+  font-weight: 600;
+  color: var(--couleurNoir);
+  text-align: center;
+  padding-top: 120px;
+}
+
+.text-titre-produit {
+  font-family: 'roboto', sans-serif;
+  font-size: 0.90em;
+  font-weight: 400;
+  font-style: italic;
+  text-align: center;
+  color: var(--couleurNoir);
+}
+
 .bloc-ouverture-commerce {
-  margin-top: 70px;
+  padding-top: 15px;
+  padding-bottom: 6px;
+  margin-top: 30px;
   background-color: var(--couleurBlancCreme);
-  display: block;
+  display: flex;
   box-shadow: 10px 15px 20px 2px rgba(0,0,0,0.15);
+  margin-left: 0%;
+  margin-top: 40px;
+  margin-bottom: 70px;
+}
+
+.fa-pencil-alt {
+  font-size: 0.90em;
+  border-radius: 50%;
+  margin-left: 8px;
+  padding: 8px;
+  background-color: var(--couleurVerte);
+  color: var(--couleurNoir);
+  -webkit-box-shadow: 6px 14px 22px -1px rgba(0,0,0,0.18);
+  -moz-box-shadow: 6px 14px 22px -1px rgba(0,0,0,0.18);
+  box-shadow: 6px 14px 22px -1px rgba(0,0,0,0.18);
+  transition: all 0.3s ease-out;
+  cursor: pointer;
+}
+
+.fa-pencil-alt:hover {
+  background-color: var(--couleurNoir);
+  color: var(--couleurVerte);
+}
+
+.bloc-vitrine {
+  width: 100%;
+  height: 95%;
+  background-color: var(--couleurGrisClair);
 }
 
 .img-vitrine {
-  height: 400px;
-  background-color: var(--couleurGrisClair);
-  margin-top: 15px;
+  width: 100%;
+  height: 300px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .detail-commerce {
-  display: flex;
+  display: block;
 }
 
 .bloc-information-commerce {
   background-color: var(--couleurNoir);
-
 }
 
 .nom-commerce {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.6em;
-  font-weight: 600;
+  font-size: 1.4em;
+  font-weight: 400;
   color: var(--couleurBlancCreme);
   text-align: center;
-  padding-top: 50px;
+  padding-top: 25px;
 }
 
 .rue-commerce {
   font-family: 'roboto', sans-serif;
   font-size: 0.85em;
-  font-weight: 600;
+  font-weight: 400;
   font-style: italic;
   color: var(--couleurBlancCreme);
   text-align: center;
@@ -48,35 +115,31 @@
 
 .detail-ouverture {
   font-family: 'roboto', sans-serif;
-  font-size: 0.85em;
+  font-size: 1em;
   font-weight: 600;
   color: var(--couleurNoir);
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.fa-clock {
+  color: var(--couleurVerte);
 }
 
 .detail-horaires {
   font-family: 'roboto', sans-serif;
-  font-size: 0.90em;
-  font-weight: 600;
+  font-size: 0.95em;
+  font-weight: 400;
   color: var(--couleurNoir);
-  text-align: center;
+  margin-left: 30px;
   margin-top: 5px;
   margin-bottom: 7px;
 }
 
-.details-fermer {
-  font-family: 'roboto', sans-serif;
-  font-size: 0.85em;
-  font-weight: 400;
-  color: var(--couleurRougeIncorrect);
-  font-style: italic;
-}
-
 .italic-horaire {
   font-family: 'roboto', sans-serif;
-  font-size: 0.85em;
+  font-size: 0.95em;
   font-weight: 400;
   color: var(--couleurNoir);
   font-style: italic;
@@ -84,12 +147,13 @@
 
 .bloc-ouverture {
   text-align: center;
-  margin-top: 50px;
-  margin-bottom: 55px;
+  padding-bottom: 25px;
+  margin-top: 25px;
+
 }
 
 .bouton-ouverture {
-  width: 185px;
+  width: 160px;
   font-family: 'roboto', sans-serif;
   font-size: 1em;
   font-weight: 600;
@@ -99,8 +163,8 @@
   box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
   border: 2px solid var(--couleurBlancCreme);
   border-radius: 28px;
-  padding: 14px 20px 14px 20px;
-  margin-left: 32%;
+  padding: 10px 16px 10px 16px;
+  margin-left: 34%;
   -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   cursor: pointer;
@@ -113,7 +177,5 @@
   border-radius: 28px;
 }
 
-.bloc-information-horaire {
-  padding-top: 30px;
-}
+
 
