--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -2,43 +2,43 @@
 
 
 
-<div class="row">
-  <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces" *ngIf="commerce">
+  <div class="container">
+    <div class="row col-12">
+      <h2 class="titre-produit col-12" id="il-faut-aller-ici-produits">// VOTRE COMMERCE</h2>
+      <p class="text-titre-produit col-12">Retrouvez tous les détails de votre commerce.</p>
 
-    <div class="cercle-bookmark" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  [routerLink]="'/merchant/commerce/addOrUdapte/' + commerce.id" >
-      <i class="fas fa-pencil-alt" ></i>
-    </div>
-
-    <div class="img-vitrine col-6 no-gutters">
-      <img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
-    </div>
-
-    <div class="detail-commerce col-6">
-
-      <div class="bloc-information-commerce col-12">
-        <h2 class="nom-commerce">{{commerce.name}} - {{commerce.uniqueIdName}}</h2>
-        <p class="rue-commerce">{{commerce.address.address}}, {{commerce.address.cityName}}</p>
-        <div class="bloc-ouverture ">
-          <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+      <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+        <div class="bloc-vitrine col-6 no-gutters">
+          <a [routerLink]="'/commerceSheet/' + commerce.id"><img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}"></a>
         </div>
-      </div>
 
-      <div class="bloc-information-horaire col-12">
-        <!-- <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+        <div class="detail-commerce col-6">
 
-         <ul>
-           <li class="detail-ouverture">Horaires d'ouverture :</li>
-           <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
-           <li class="detail-horaires">Mardi: <span class="italic-horaire">7h-19h</span></li>
-           <li class="detail-horaires">Mercredi: <span class="italic-horaire"> 7h-19h</span></li>
-           <li class="detail-horaires">Jeudi:<span class="italic-horaire"> 7h-19h</span></li>
-           <li class="detail-horaires">Vendredi: <span class="italic-horaire">7h-19h</span> </li>
-           <li class="detail-horaires">Samedi: <span class="italic-horaire"> 9h-16h30</span></li>
-           <li class="detail-horaires">Dimanche: <span class="italic-horaire">9h-12h</span></li>
-         </ul>
-         -->
+          <div class="bloc-information-commerce col-12">
+            <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a> <i class="fas fa-pencil-alt" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" ></i></h2>
+            <p class="rue-commerce"><!-- {{commerce.address.address}}, {{commerce.address.cityName}} --></p>
 
+            <div class="bloc-ouverture ">
+              <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+            </div>
+
+          </div>
+
+
+          <div class="bloc-information-horaire col-12">
+            <!--
+            // Todo a remettre
+             <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+            -->
+            <ul>
+              <li class="detail-ouverture"><i class="far fa-clock"></i> Horaires d'ouverture :</li>
+              <li class="detail-horaires">Lundi : <span class="italic-horaire"> Fermer</span></li>
+              <li class="detail-horaires">Mardi - Mercredi - Jeudi - Vendredi: <span class="italic-horaire"> 8h-19h</span></li>
+              <li class="detail-horaires">Samedi - Dimanche: <span class="italic-horaire"> 9h-12h30</span></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
