--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.html
@@ -12,6 +12,7 @@
 <div class="super-bloc-fiche-produit" >
   <input formControlName="id" name="id" class="hidden" type="text">
 
+  <h2 class="titre-modifications-produit col-12" id="il-faut-aller-ici-produits"><i class="far fa-edit"></i> / MODIFICATIONS FICHE PRODUIT</h2>
   <div class="bloc-titre col-12">
     <div>
       <label class="label-produit"><i class="fas fa-asterisk"></i>  Nom Produit </label><i class="fas fa-bookmark"></i>
@@ -40,43 +41,46 @@
       </article>
     </div>
     <div class="informations-affichage col-6">
-      <div class="commerce-affichage">
+
+
         <div class="bloc-prix-affichage col-12">
-          <div class="affichage col-6">
-            <div class="prix-affichage">
-              <i class="fas fa-asterisk" ></i>
-              <input formControlName="salePrice" name="salePrice" type="number" placeholder="Prix en promotion" required> €
-              <span class="text-danger" *ngIf="controlSalePrice(); let message">{{message}}</span>
-            </div>
-            <div class="bloc-prix-barre">
-                <div class="prix-barre-affichage">
-                  <i class="fas fa-asterisk" ></i>
-                  <input formControlName="price" name="price" type="number" placeholder="Prix" required> €
-                  <span class="text-danger" *ngIf="controlPrice(); let message">{{message}}</span>
+          <div class="affichage col-12">
+            <div class="grand-bloc-input-3">
+              <div class="bloc-input3">
+                <div class="font-input3-bis">
+                  <i class="fas fa-asterisk"></i><input class="input3" formControlName="salePrice" name="salePrice" type="number" placeholder="Nouveau Prix" required>
                 </div>
-              	<div class="trait"></div>
+                <span class="text-danger-input3" *ngIf="controlSalePrice(); let message">{{message}}</span>
+              </div>
+              <div class="bloc-input3">
+                <div class="font-input3">
+                  <i class="fas fa-asterisk"></i><input class="input3"  formControlName="price" name="price" type="number" placeholder="Prix Barré" required>
+                </div>
+                <span class="text-danger-input3" *ngIf="controlPrice(); let message">{{message}}</span>
+              </div>
             </div>
+         </div>
+        </div>
+
+        <div class="commerce-affichage">
+          <div class="Lieu-affichage col-8">
+            <label for="liste-mois" class="label-formulaire"> Votre produit est disponible ici :</label>
+            <select id="liste-mois" class="liste-mois col-12">
+              <option>Daily Juicery (lille)</option>  <!-- todo -->
+              <option>Daily Juicery (lille)</option>
+              <option>Daily Juicery (lille)</option>
+              <option>Daily Juicery (lille)</option>
+              <option>Daily Juicery (lille)</option>
+              <option>Daily Juicery (lille)</option>
+            </select>
           </div>
 
-        </div>
-        <div class="Lieu-affichage col-8">
-          <label for="liste-mois" class="label-formulaire"> Votre produit est disponible ici :</label>
-          <select id="liste-mois" class="liste-mois col-12">
-            <option>Daily Juicery (lille)</option>  <!-- todo -->
-            <option>Daily Juicery (lille)</option>
-            <option>Daily Juicery (lille)</option>
-            <option>Daily Juicery (lille)</option>
-            <option>Daily Juicery (lille)</option>
-            <option>Daily Juicery (lille)</option>
-          </select>
-        </div>
-
-        <!-- todo
-        <div class="bloc-quantite-produit col-6" *ngIf="productTemplate.schedulerWeekForSaleAndUnsold && productTemplate.schedulerWeekForSaleAndUnsold.days && (productTemplate.schedulerWeekForSaleAndUnsold.days.length==2) && productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges && (productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges.length>=1) ">
-          <p class="offre-disponible"><i class="fas fa-asterisk"></i> Offre disponible jusqu'à {{productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges[0].endTime}}.</p>
-        </div>
-        -->
-      </div>
+          <!-- todo
+          <div class="bloc-quantite-produit col-6" *ngIf="productTemplate.schedulerWeekForSaleAndUnsold && productTemplate.schedulerWeekForSaleAndUnsold.days && (productTemplate.schedulerWeekForSaleAndUnsold.days.length==2) && productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges && (productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges.length>=1) ">
+            <p class="offre-disponible"><i class="fas fa-asterisk"></i> Offre disponible jusqu'à {{productTemplate.schedulerWeekForSaleAndUnsold.days[0].hoursRanges[0].endTime}}.</p>
+          </div>
+          -->
+       </div>
     </div>
 
   </div>
@@ -86,65 +90,66 @@
         <div class="composition-produit">
           <h4 class="titre-detail">// DETAILS DU PRODUIT</h4>
           <h5><i class="fas fa-caret-right"></i> Composition</h5>
-          <hr>
           <p class="composition-affichage">
-            <i class="fas fa-asterisk" ></i>
-            <textarea formControlName="description" name="description" type="text" placeholder="Description" required></textarea>
+            <textarea class="textarea col-12" formControlName="description" name="description" type="text" placeholder="Description" required></textarea>
             <span class="text-danger" *ngIf="controlDescription(); let message">{{message}}</span>
           </p>
+          <hr>
         </div>
         <div class="composition-produit">
           <h5><i class="fas fa-caret-right"></i> Emballage</h5>
-          <hr>
           <p class="composition-affichage">
             <input formControlName="isPackaged" name="isPackaged" type="checkbox"  >
           </p>
+          <hr>
         </div>
         <div class="composition-produit col-12">
           <h5><i class="fas fa-caret-right"></i> Code Produit </h5>
-          <hr>
           <p class="composition-affichage">
-            <input class="input" formControlName="externalCode" name="externalCode" class="externalCode" type="text" placeholder="Code Produit" >
+            <input class="input" formControlName="externalCode" name="externalCode" type="text" placeholder="Code Produit" >
           </p>
+          <hr>
         </div>
         <div class="composition-produit">
-          <h5><i class="fas fa-caret-right"></i> Mise en Promotion et Invendu Automatique </h5>
-          <hr>
+          <h5><i class="fas fa-caret-right"></i> Promotion et Invendu Automatique </h5>
           <p class="composition-affichage">
             <input formControlName="timeControlStatus" name="timeControlStatus" type="checkbox" >
           </p>
+          <hr>
         </div>
 
         <div class="composition-produit">
-          <h5><i class="fas fa-caret-right"></i> Durée maximum maintien dans le panier  <i class="fas fa-asterisk" ></i> </h5>
+          <h5><i class="fas fa-caret-right"></i> Durée maximale dans le panier </h5>
+          <div class="composition-affichage">
+            <input class="input-duree" formControlName="maxDurationCart" name="maxDurationCart" type="number" placeholder="Durée panier" required>
+            <p class="text-danger-duree" *ngIf="controlMaxDurationCart(); let message">{{message}}</p>
+          </div>
           <hr>
-          <p class="composition-affichage">
-            <input class="input" formControlName="maxDurationCart" name="maxDurationCart" type="number" placeholder="Durée maximum mainteint dans le panier" required>
-            <span class="text-danger" *ngIf="controlMaxDurationCart(); let message">{{message}}</span>
-          </p>
         </div>
 
         <div class="composition-produit col-12">
           <h5><i class="fas fa-caret-right"></i> Régime Alimentaire compatible</h5>
-          <hr>
           <p class="composition-affichage"> Sportif - </p>
+          <hr>
         </div>
         <div class="composition-produit col-12">
           <h5><i class="fas fa-caret-right"></i> Allergènes</h5>
-          <hr>
           <p class="composition-affichage"> Gluten - Fruit à coque</p>
+          <hr>
+        </div>
+
+        <div class="bloc-bouton col-12" >
+          <button id ="bt_signin_submit" class="bouton-sauvegarder" type="submit" [disabled]="form1.invalid" >Sauvegarder</button>
+          <p  class="avertissement-inscription" *ngIf="form1.invalid" >* Veuillez remplir tous les champs pour valider la fiche produit.</p>
         </div>
       </div>
 
 
-      <div class="bouton-panier" >
-        <button id ="bt_signin_submit" class="bouton-inscription" type="submit" [disabled]="form1.invalid" >Sauvegarder</button>
-        <p *ngIf="form1.invalid" class="avertissement-inscription">* Veuillez remplir tous les champs pour valider la fiche.</p>
-      </div>
+
+
+
     </div>
-
-  </div>
-
+   </div>
 </div>
 
 </form >
