--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.scss
@@ -10,7 +10,7 @@ a {
 
 .bloc-ouverture-commerce {
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 6px;
   margin-top: 30px;
   background-color: var(--couleurBlancCreme);
   display: flex;
@@ -38,14 +38,12 @@ a {
 
 .bloc-vitrine {
   width: 100%;
-  height: 100%;
+  height: 95%;
   background-color: var(--couleurGrisClair);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .img-vitrine {
+  width: 100%;
   height: 300px;
   background-size: contain;
   background-repeat: no-repeat;
