-affichage des horaires. -supression des message sur click du container pour regler l'impossiblité de clicker sur les logins. -corrige les arrivées de données, pour en faire des instances de classes.

--- a/angularProject/nogashiFront/src/app/components/common/info-box-notifications/info-box-notifications.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/info-box-notifications/info-box-notifications.component.html
@@ -4,12 +4,12 @@
 
 
 
-<div *ngIf="messages" class="infobox_container">
+<div *ngIf="messages" class="infobox_container" (click)="removeAllMessage()" >
 
     <div class="infobox {{msg.type}}" *ngFor="let msg of messages"  (click)="removeMessage(msg.id)">
         <div class="infobox_message">
             {{msg.message}}
         </div>
     </div>
-    
+
 </div>
