--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -6,25 +6,28 @@
   <div class="row col-12">
     <h2 class="titre-produit col-12" id="il-faut-aller-ici-produits">// VOTRE COMMERCE</h2>
     <p class="text-titre-produit col-12">Retrouvez tous les détails de votre commerce.</p>
-  </div>
-  
-  <div class="img-vitrine col-6 no-gutters">
-      <img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
-  </div>
-   
-  <div class="detail-commerce col-6">
-    <div class="bloc-information-commerce col-12">
-      <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a> <i *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  class="fas fa-pencil-alt" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" ></i></h2>
-      <p class="rue-commerce"> {{commerce.address.address}}, {{commerce.address.cityName}} </p>
-      
-      <div class="bloc-ouverture ">
-        <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+
+
+    <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+
+      <div class="img-vitrine col-6 no-gutters">
+          <img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
       </div>
 
-      <div class="bloc-information-horaire col-12">
-        <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+      <div class="detail-commerce col-6">
+        <div class="bloc-information-commerce col-12">
+          <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a> <i *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  class="fas fa-pencil-alt" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" ></i></h2>
+          <p class="rue-commerce"> {{commerce.address.address}}, {{commerce.address.cityName}} </p>
+
+          <div class="bloc-ouverture ">
+            <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+          </div>
+
+          <div class="bloc-information-horaire col-12">
+            <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
