Ajout du panier et du récap de commande dans Angular

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="bloc-panier" *ngIf="connexionService.getLocalConnectedRole()!==UserRole.MERCHANT" >
-            <a href=""><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
+            <a routerLink="common/cart/add"><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
           </div>
         </div>
         <div class="Lieu-affichage col-8">
