--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.html
@@ -4,90 +4,26 @@
 <section class="section-resumer-commande">
   <div class="container">
     <div class="row">
-    </div>
-    <div class="bloc-titre-commandes">
-      <h2 class="titre-commandes"><i class="fas fa-cube"></i> / RESUME DE MA COMMANDE </h2>
-      <br>
-      <br>
-      <p class="texte-commandes">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis,  iudices, nec descensurum</p>
-      <br>
-      <div class="bloc-commerce-commande">
-        <h3 class="titre-commerce">- Boulangerie Mathieu -</h3>
-        <table class="table-commande col-12">
-          <tr class="tr-titre">
-            <td class="td-titre col-4">Produits</td>
-            <td class="td-titre col-3">Prix</td>
-            <td class="td-titre col-2">Quantité</td>
-            <td class="td-titre col-3">Total</td>
-          </tr>
-          <tr class="tr">
-            <td class="td-produits col-4">Croissant</td>
-            <td class="td col-3">1.10€</td>
-            <td class="td col-3">02</td>
-            <td class="td col-2">2.20€</td>
-          </tr>
-        </table>
-        <div class="time">
-          <p class="texte-time"><i class="fas fa-exclamation-circle"></i> Veuillez récupérer vos produits avant : 20h15</p>
-        </div>
 
+      <div class="bloc-titre-commandes">
+        <h2 class="titre-commandes"><i class="fas fa-cube"></i> / RESUME DE MA COMMANDE </h2>
+        <br>
+        <br>
+        <p class="texte-commandes">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis,  iudices, nec descensurum</p>
+        <br>
       </div>
-      <div class="bloc-commerce-commande">
-        <h3 class="titre-commerce">- Daily Juicery -</h3>
-        <table class="table-commande col-12">
-          <tr class="tr-titre">
-            <td class="td-titre col-4">Produits</td>
-            <td class="td-titre col-3">Prix</td>
-            <td class="td-titre col-2">Quantité</td>
-            <td class="td-titre col-3">Total</td>
-          </tr>
-          <tr class="tr">
-            <td class="td-produits col-4">ROOTS 1.2, Jus détox 100% naturel</td>
-            <td class="td col-3">7.00€</td>
-            <td class="td col-3">01</td>
-            <td class="td col-2">7.00€</td>
-          </tr>
-          <tr class="tr">
-            <td class="td-produits col-4">GREEN 5.0, Jus détox 100% naturel</td>
-            <td class="td col-3">7.00€</td>
-            <td class="td col-3">02</td>
-            <td class="td col-2">14.00€</td>
-          </tr>
-        </table>
-        <div class="time">
-          <p class="texte-time"><i class="fas fa-exclamation-circle"></i> Veuillez récupérer vos produits avant : 17h30</p>
-        </div>
-      </div>
-      <div class="bloc-commerce-commande">
-        <h3 class="titre-commerce">- Subway -</h3>
-        <table class="table-commande col-12">
-          <tr class="tr-titre">
-            <td class="td-titre col-4">Produits</td>
-            <td class="td-titre col-3">Prix</td>
-            <td class="td-titre col-2">Quantité</td>
-            <td class="td-titre col-3">Total</td>
 
-          </tr>
-          <tr class="tr">
-            <td class="td-produits col-4">Sandwich - Poulet</td>
-            <td class="td col-3">3.40€</td>
-            <td class="td col-3">01</td>
-            <td class="td col-2">3.40€</td>
-          </tr>
-        </table>
-        <div class="time">
-          <p class="texte-time"><i class="fas fa-exclamation-circle"></i> Veuillez récupérer vos produits avant : 18h00</p>
-        </div>
-      </div>
+      <app-cart-by-commerce *ngFor="let scbc of shoppingCart.shoppingCartByCommerces" [shoppingCartByCommerce]="scbc"></app-cart-by-commerce>
 
       <div class="bloc-prix-affichage col-12">
         <div class="text-total">Total Panier :</div>
-        <div class="prix-affichage">114,90 €</div>
+        <div class="prix-affichage">{{shoppingCart.price}} €</div>
       </div>
 
       <div class="bloc-bouton-commande col-12">
         <div class="bloc-retour-panier">
-          <a href="shoppingCart"><div id ="bouton-retour" class="bouton-retour">PANIER</div></a>        </div>
+          <a href="shoppingCart"><div id ="bouton-retour" class="bouton-retour">PANIER</div></a>
+        </div>
         <div class="bloc-payer">
           <a href="paiement.html"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
         </div>
