--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="bloc-panier">
-      <a href=""><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
+      <a routerLink="/common/cart/add"><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
     </div>
   </div>
 
